EP - refactor - Usuario and Veiculo and Vaga
